test/stage2/test_11810517_5.out
Error Type 4 at Line 5: function "f" is redefined.