test/stage2/test_11810517_5.spl
int f(int x) {
	return 1;
}

int f(int x) {
	return x;
}

int main() {
	f(1);
	f(2);
}